--- a/styles.css
+++ b/styles.css
@@ -38,19 +38,13 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
-.btn
-{
-	display:inline-block;
-	height:36px;
-	margin-bottom:15px;
-	padding:0 2rem;
-	-webkit-border-radius:2px;
-	-moz-border-radius:2px;
-	border-radius:2px;
-	background-clip:padding-box;
-	line-height:36px;
-	text-transform:uppercase;
-	border:none;
-	outline:0;
-	-webkit-tap-highlight-color:transparent
+.isimain{
+	padding:70px 30px 30px 30px;
+}
+
+input[type=text],select,textarea{
+	width:400px;
+	margin:10px 0 10px 0;
+	padding:10px;
+	resize:none
 }
